<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/len_48"
        android:layout_gravity="top"
        android:background="@color/pink_300"
        android:padding="1px">


        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="26dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/photo_album_bt"
            android:tint="@color/white" />

        <net.qiujuer.genius.ui.widget.Button
            android:id="@+id/btn_close_image_folder"
            android:layout_width="@dimen/len_64"
            android:layout_height="match_parent"
            android:background="@color/trans"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/len_12"
            android:text="@string/back"
            android:textColor="@color/panel_top_color"
            app:gTouchColor="@color/black_alpha_32"
            app:gTouchCornerRadius="0dp"
            app:gTouchDurationRate="0.3"
            app:gTouchEffect="ripple" />

        <net.qiujuer.genius.ui.widget.Button
            android:id="@+id/btn_edit"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/len_64"
            android:background="@color/trans"
            android:enabled="false"
            android:text="@string/edit"
            android:textColor="@color/panel_top_color"
            app:gTouchColor="@color/black_alpha_32"
            app:gTouchCornerRadius="0dp"
            app:gTouchDurationRate="0.3"
            app:gTouchEffect="ripple" />

        <CheckBox
            android:id="@+id/cb_full"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/len_2"
            android:layout_marginStart="154dp"
            android:layout_marginTop="@dimen/len_2"
            android:button="@drawable/sel_cb_circle"
            android:buttonTint="@color/panel_top_color"
            android:enabled="false"
            android:paddingEnd="@dimen/len_6"
            android:paddingStart="@dimen/len_4"
            android:shadowColor="@color/pink_100"
            android:text="@string/artwork"
            android:textColor="@color/panel_top_color"
            tools:targetApi="lollipop" />

        <net.qiujuer.genius.ui.widget.Button
            android:id="@+id/btn_submit"
            android:layout_width="@dimen/len_72"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="@dimen/len_10"
            android:layout_marginTop="7dp"
            android:backgroundTint="@color/panel_top_color"
            android:enabled="false"
            android:padding="0dp"
            android:text="@string/send"
            android:textColor="@color/pink_300"
            app:gTouchColor="@color/pink_400"
            app:gTouchCornerRadius="0dp"
            app:gTouchDurationRate="0.3"
            app:gTouchEffect="ripple"
            tools:targetApi="lollipop" />
    </FrameLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/gv_album"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/len_48"
        android:clipToPadding="false"
        android:minHeight="820dp"
        android:padding="1dp" />



</FrameLayout>
